relm4-macros/tests/ui/compile-fail/missing-view.stderr
error[E0046]: not all trait items implemented, missing: `Root`, `init_root`
 --> tests/ui/compile-fail/missing-view.rs:6:1
  |
6 | impl SimpleComponent for App {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Root`, `init_root` in implementation
  |
  = help: implement the missing item: `type Root = Type;`
  = help: implement the missing item: `fn init_root() -> <Self as relm4::SimpleComponent>::Root { todo!() }`
